# connors-regime

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  tests.yml
connors_regime/: __init__.py
connors_regime/core/: __init__.py  market_regime.py  registry.py
connors_regime/services/: __init__.py  regime_service.py
tests/: test_regime_detector.py
